--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -10,6 +10,7 @@ body, html{
 	font-size: 11px;
 	background-color: #fff;
 	border: 1px solid #e3e3e3;
+	/*border: 2px solid #38C91F;*/
 }
 
 #container h1{
@@ -109,3 +110,27 @@ textarea:focus,
 input:focus {
 	border: 2px solid #A6CDFF;
 }
+
+/*#form-cont{
+	display: none;
+}*/
+
+#confirm-box{
+	display: none;
+	font-size: 13.5px;
+	margin-top: 90px;
+	line-height: 10px;
+}
+
+#confirm-box p{
+	line-height: 20px;
+}
+
+#confirm-img{
+	float: right;
+	margin: 100px 70px 0 0;
+}
+#confirm-img img{
+	margin: 0 0 0 35px;
+}
+
