--- a/templates/base.html
+++ b/templates/base.html
@@ -64,11 +64,8 @@
 			</p>
 
 			<div id="confirm-img">
-				<a href="http://provplan.org/index.php/">
-					<img src="{{url_for('static', filename='images/pphand.png')}}" alt="Prov Plan" width="90" height="auto" >
-				</a>
-				<a href="http://ridatahub.org/">
-					<img src="{{url_for('static', filename='images/HUBlogo.png')}}" alt="RIDataHUB" width="80" height="auto" >
+				<a href="#">
+					<img src="{{url_for('static', filename='images/pphand.png')}}" alt="Prov Plan" width="150" height="auto" >
 				</a>
 			</div>
 
