--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -1,3 +1,216 @@
+/*---------Begin normalize.css v2.1.3 Specs----------*/
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section,
+summary {
+    display: block;
+}
+
+audio,
+canvas,
+video {
+    display: inline-block;
+}
+
+audio:not([controls]) {
+    display: none;
+    height: 0;
+}
+
+[hidden],
+template {
+    display: none;
+}
+
+html {
+    font-family: sans-serif; 
+    -ms-text-size-adjust: 100%; 
+    -webkit-text-size-adjust: 100%; 
+}
+
+body {
+    margin: 0;
+}
+
+a {
+    background: transparent;
+}
+
+a:focus {
+    outline: thin dotted;
+}
+
+a:active,
+a:hover {
+    outline: 0;
+}
+
+h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+}
+
+abbr[title] {
+    border-bottom: 1px dotted;
+}
+
+b,
+strong {
+    font-weight: bold;
+}
+
+dfn {
+    font-style: italic;
+}
+
+hr {
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    height: 0;
+}
+
+mark {
+    background: #ff0;
+    color: #000;
+}
+
+code,
+kbd,
+pre,
+samp {
+    font-family: monospace, serif;
+    font-size: 1em;
+}
+
+pre {
+    white-space: pre-wrap;
+}
+
+q {
+    quotes: "\201C" "\201D" "\2018" "\2019";
+}
+
+small {
+    font-size: 80%;
+}
+
+sub,
+sup {
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+}
+
+sup {
+    top: -0.5em;
+}
+
+sub {
+    bottom: -0.25em;
+}
+
+img {
+    border: 0;
+}
+
+svg:not(:root) {
+    overflow: hidden;
+}
+
+figure {
+    margin: 0;
+}
+
+fieldset {
+    border: 1px solid #c0c0c0;
+    margin: 0 2px;
+    padding: 0.35em 0.625em 0.75em;
+}
+
+legend {
+    border: 0; 
+    padding: 0; 
+}
+
+button,
+input,
+select,
+textarea {
+    font-family: inherit; 
+    font-size: 100%; 
+    margin: 0; 
+}
+
+button,
+input {
+    line-height: normal;
+}
+
+button,
+select {
+    text-transform: none;
+}
+
+button,
+html input[type="button"], 
+input[type="reset"],
+input[type="submit"] {
+    -webkit-appearance: button; 
+    cursor: pointer;
+}
+
+button[disabled],
+html input[disabled] {
+    cursor: default;
+}
+
+input[type="checkbox"],
+input[type="radio"] {
+    box-sizing: border-box; 
+    padding: 0; 
+}
+
+input[type="search"] {
+    -webkit-appearance: textfield;
+    -moz-box-sizing: content-box;
+    -webkit-box-sizing: content-box; 
+    box-sizing: content-box;
+}
+
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+}
+
+textarea {
+    overflow: auto; 
+    vertical-align: top;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+/*-----End Normalize Specs-----------------------*/
+
+
+
+/*------Begin feedback CSS------------------------*/
 body, html{
 	font-family: Verdana, Helvetica, Arial, sans-serif;
 	margin:0;
@@ -20,6 +233,7 @@ input, textarea{
 
 input{
 	width: 175px;
+	height: 20px;
 	padding: 5px;
 }
 
@@ -29,15 +243,19 @@ textarea{
 	font-size: 11px;
 }
 
+textarea:focus, 
+input:focus {
+	border: 2px solid #A6CDFF;
+}
+
 #container{
 	width: 600px;
 	height: 342px;
 	padding: 30px;
-	/*margin: 0 auto;*/
 	font-size: 11px;
 	background-color: #fff;
 	border: 1px solid #e3e3e3;
-	/*border: 2px solid #38C91F;*/
+	
 }
 
 #container h1{
@@ -79,7 +297,7 @@ textarea{
 }
 
 #email, #user-name{
-	margin-top: -3px;
+	/*margin-top: -3px;*/
 }
 
 #content-inp{
@@ -137,6 +355,7 @@ textarea{
 
 #submit-btn{
 	width: 110px;
+	height: 30px;
 	border-radius: 5px;
 }
 
@@ -147,15 +366,6 @@ textarea{
 .inp-lite{
 	border: 2px solid #e3e3e3;
 }
-
-textarea:focus, 
-input:focus {
-	border: 2px solid #A6CDFF;
-}
-
-/*#form-cont{
-	display: none;
-}*/
 
 #confirm-box{
 	display: none;
@@ -170,7 +380,7 @@ input:focus {
 
 #confirm-img{
 	float: right;
-	margin: 100px 70px 0 0;
+	margin: 50px 70px 0 0;
 }
 #confirm-img img{
 	margin: 0 0 0 35px;
