corrected base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Form</title>
-	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='CSS/base.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/base.css')}}">
 
 
 </head>
@@ -71,7 +71,7 @@
 		</div>
 	</div><!--End container-->
 
-	<script src="{{url_for('static', filename='JS/jquery.min.js')}}"></script>
-	<script src="{{url_for('static', filename='JS/base.js')}}"></script>
+	<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+	<script src="{{url_for('static', filename='js/base.js')}}"></script>
 </body>
 </html>
