--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 		<div id="form-cont">
 
 			<h1>Give us Feedback</h1>
-			<div id="intro">Is something not working as it should? Let us know</div>
+			<div id="intro">Use this form to submit general inquiries, report bugs, or request additional assistance</div>
 
 			<form action="/submit" method="post" name="issue-form" id="issue-form">
 				<div class="form-field" id="drop-down">
@@ -48,12 +48,20 @@
 				</div>
 
 				<div class="form-field" id="submit-box">
-					<input id="submit-btn" type="submit" value="Send Report">
+					<input id="submit-btn" type="submit" value="Submit">
 				</div>
 				<input type="hidden" name="ref" value='{{referer}}'>
 			</form>
-		</div>
+		
 
+			<div id="terms-and-cond">
+
+				<h4>Terms and Conditions</h4>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</div>
+		</div>
 		<div id="message-box">
 			<div id="success-message">
 				<h1>Thank You!</h1>
