--- a/static/css/base.css
+++ b/static/css/base.css
@@ -254,7 +254,7 @@ input:focus {
 	font-size: 11px;
 	background-color: #fff;
 	border: 1px solid #e3e3e3;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
 	
 }
 
@@ -385,7 +385,7 @@ input:focus {
 	height: 30px;
 	border-radius: 5px;
 	position: absolute;
-	right: 25px;
+	right: 27px;
 }
 
 .btn-lite{
