--- a/static/css/base.css
+++ b/static/css/base.css
@@ -232,13 +232,13 @@ input, textarea{
 }
 
 input{
-	width: 175px;
+	width: 189px;
 	height: 20px;
 	padding: 5px;
 }
 
 textarea{
-	width: 467px;
+	width: 494px;
 	height: 100px;
 	font-size: 11px;
 }
@@ -249,8 +249,8 @@ input:focus {
 }
 
 #container{
-	width: 590px;
-	height: 452px;
+	width: 618px;
+	height: 463px;
 	font-size: 11px;
 	background-color: #fff;
 	border: 1px solid #e3e3e3;
@@ -399,6 +399,7 @@ input:focus {
 #terms-and-cond{
 	color: #6A6970;
 	font-size:8.5px;
+	line-height: 10px;
 	background-color: #f3f3f3;
 	padding: 7px 6px 1px 8px;
 }
@@ -435,8 +436,17 @@ input:focus {
 	display: none;
 }
 
+#success-message h1{
+	color: #3A8C03;
+	font-size: 20px;
+}
+
 #error-message{
 	display: none;
+}
+
+#error-message h1{
+	font-size: 20px;
 }
 
 .profiles-email{
