--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,17 @@
 		<div id="form-cont">
 
 			<div id="profiles-header">
-				<h1>Thank you for using Community Profiles. 
-				We welcome all feedback</h1>		
+				<h1>Thank you for using RI Community Profiles. We welcome your feedback!</h1>		
 			</div>
 
 			<div id="datahub-header">
-				<h1>Thank you for using RI DataHub. We welcome all feedback</h1>
+				<h1>Thank you for using RI DataHUB. We welcome your feedback!</h1>
 			</div>
 
 
 			<div id="intro">
-				Use this form to submit general inquiries, report bugs, or request additional assistance
+				Use this form to submit bug reports, usability issues and feature suggestions directly to the 
+				development team. We appreciate you taking the time to let us know.
 			</div>
 
 			<form action="/submit" method="post" name="issue-form" id="issue-form">
@@ -73,7 +73,10 @@
 
 				<h4>Terms and Conditions</h4>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					Any information or suggestions you provide at this site shall be deemed to be non-confidential. The Providence Plan shall be free to use such information on an unrestricted basis.
+				</p>
+				<p>
+					The Providence Plan will not use the information collected here for future marketing or promotional contacts or other communications beyond the scope of this transaction. The e-mail address you provide will only be used to contact you regarding this report.
 				</p>
 			</div>
 		<div id="message-box">
@@ -102,7 +105,7 @@
 			</div>
 			<div id="tpp-logo" class="site-logo">
 				<a href="#">
-					<img src="{{url_for('static', filename='images/pphand.png')}}" alt="Prov Plan" width="150" height="30" >
+					<img src="{{url_for('static', filename='images/pphand.png')}}" alt="Prov Plan" width="150" height="25" >
 				</a>
 			</div>
 
