--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,10 @@
 				<div class="form-field" id="submit-box">
 					<input id="submit-btn" type="submit" value="Submit">
 				</div>
+
+				<!-- hidden inputs to be submitted w/form-->
 				<input type="hidden" name="ref" value='{{referer}}'>
+				<input id="user-agent-input" type="hidden" name="user-agent">
 			</form>
 		</div>
 		<div id="terms-and-cond">
@@ -119,7 +122,7 @@
 
 	</div><!--End container-->
 
-	<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+	<script src="{{url_for('static', filename='js/jquery-1.10.2.js')}}"></script>
 	<script src="{{url_for('static', filename='js/base.js')}}"></script>
 </body>
 </html>
