corrected terms and conditions

--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
 					Any information or suggestions you provide at this site shall be deemed to be non-confidential. The Providence Plan shall be free to use such information on an unrestricted basis.
 				</p>
 				<p>
-					The Providence Plan will not use the information collected here for future marketing or promotional contacts or other communications beyond the scope of this transaction. The e-mail address you provide will only be used to contact you regarding this report.
+					The Providence Plan will not use the information collected here for future marketing or promotional contacts or other communications beyond the scope of this transaction <b>without your consent</b>. The e-mail address you provide will only be used to contact you regarding this report.
 				</p>
 			</div>
 		<div id="message-box">
